task-2-main.tf
terraform {
  required_providers {
    google = {
      source = "hashicorp/google"
      version = "5.27.0"
    }
  }
}

provider "google" {
    project = var.project_id
    region  = var.region
    zone    = var.zone
    credentials = "creds.json"
}

// Create a new VPC network
resource "google_compute_network" "vpc_network" {
  name = var.network_name
  auto_create_subnetworks = false
}

resource "google_compute_subnetwork" "subnet" {
  name          = var.subnet_name
  ip_cidr_range = var.subnet_cidr
  network       = google_compute_network.vpc_network.self_link
}

// Create a new firewall rule
resource "google_compute_firewall" "firewall" {
  name    = "allow-ssh-http-tcp-icmp"
  network = google_compute_network.vpc_network.self_link

  allow {
    protocol = "tcp"
    ports    = ["22", "80", "443"]
  }

  allow {
    protocol = "icmp"
  }

allow {
    protocol = "tcp"
    ports    = ["3389"]
}

  source_ranges = ["0.0.0.0/0"]
  description = "Allow HTTP traffic"
  direction = "INGRESS"
  priority = 1000
}

// Create a static IP address
resource "google_compute_address" "static_ip" {
  count = var.instance_count
  name = "static-ip"
  address_type = "EXTERNAL"
  depends_on = [ google_compute_network.vpc_network ]
}

// Create a new instance
resource "google_compute_instance" "vm_instance" {
  name         = var.instance_name
  machine_type = var.machine_type
  zone         = var.zone

  boot_disk {
    initialize_params {
      image = "debian-cloud/debian-11"
    }
  }

  network_interface {
    network    = var.network_name
    subnetwork = var.subnet_name
    access_config {
    nat_ip = google_compute_address.static_ip[0].address
    }
  }

  tags = ["allow-ssh-http-tcp-icmp"]

    metadata = {
    startup-script = "#Thanks to Remo\n#!/bin/bash\n# Update and install Apache2\napt update\napt install -y apache2\n\n# Start and enable Apache2\nsystemctl start apache2\nsystemctl enable apache2\n\n# GCP Metadata server base URL and header\nMETADATA_URL=\"http://metadata.google.internal/computeMetadata/v1\"\nMETADATA_FLAVOR_HEADER=\"Metadata-Flavor: Google\"\n\n# Use curl to fetch instance metadata\nlocal_ipv4=$(curl -H \"$${METADATA_FLAVOR_HEADER}\" -s \"$${METADATA_URL}/instance/network-int [...]
  }
}
